UI improvements: Updated layout, responsive design, and theme support

--- a/index.html
+++ b/index.html
@@ -414,7 +414,10 @@
                         </div>
                         <div class="credit-item">
                             <h4>Special Thanks</h4>
-                            <p>To the ai16z <a href="https://www.daos.fun/HeLp6NuQkmYB4pYWo2zYs22mESHXPQYzXbB8n4V98jwC" target="_blank" rel="noopener">DAO</a> community</p>
+                            <ul class="special-thanks-list">
+                                <li>To <a href="https://github.com/madjin" target="_blank" rel="noopener">@madjin</a> for being the breathing documentation and all around connector of dots</li>
+                                <li>To the ai16z <a href="https://www.daos.fun/HeLp6NuQkmYB4pYWo2zYs22mESHXPQYzXbB8n4V98jwC" target="_blank" rel="noopener">DAO</a> community</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
