--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Generate Eliza AI character JSONS with customizable personalities">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@ai16z">
+    <meta name="twitter:title" content="Eliza Character Generator">
+    <meta name="twitter:description" content="Generate Eliza AI character JSONS with customizable personalities">
+    <meta name="twitter:image" content="https://elizagen.howieduhzit.best/images/card.png">
     <link rel="icon" type="image/x-icon" href="https://elizagen.howieduhzit.best/images/favicon.ico">
     <title>Eliza Character Generator</title>
     <link rel="stylesheet" href="styles.css">
