Add affiliate dropdown functionality: Implemented a new affiliate dropdown in the UI with toggle behavior and styles. Enhanced user experience by allowing users to access affiliate links easily. Added CSS for dropdown styling and mobile responsiveness.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
                 <a href="https://www.daos.fun/HeLp6NuQkmYB4pYWo2zYs22mESHXPQYzXbB8n4V98jwC" title="ai16z DAO" target="_blank" rel="noopener">
                     <i class="fa-solid fa-users external-icon"></i>
                 </a>
+                <div class="affiliate-dropdown">
+                    <button id="affiliate-toggle" class="affiliate-toggle" title="Affiliate Links">
+                        <i class="fa-solid fa-caret-down external-icon"></i>
+                    </button>
+                    <div class="affiliate-panel">
+                        <a href="https://eliza.gg" target="_blank" rel="noopener" class="affiliate-link">
+                            <i class="fa-solid fa-robot"></i>
+                            <span>Eliza.gg</span>
+                        </a>
+                    </div>
+                </div>
                 <button id="theme-toggle" class="theme-toggle" title="Toggle dark mode">
                     <i class="fa-solid fa-moon theme-icon"></i>
                 </button>
