Update affiliate link display and styles: Enhanced the affiliate section in index.html by adding an icon and credit link for Eliza.gg. Updated styles in styles.css for better layout and responsiveness, including new styles for the affiliate icon and link interactions. Improved mobile styles for the affiliate panel to ensure a better user experience.

--- a/index.html
+++ b/index.html
@@ -40,10 +40,14 @@
                         <i class="fa-solid fa-caret-down external-icon"></i>
                     </button>
                     <div class="affiliate-panel">
-                        <a href="https://eliza.gg" target="_blank" rel="noopener" class="affiliate-link">
-                            <i class="fa-solid fa-robot"></i>
-                            <span>Eliza.gg</span>
-                        </a>
+                        <div class="affiliate-link">
+                            <img src="https://pbs.twimg.com/profile_images/1867831909100781569/vb9ghSVC_400x400.jpg" class="affiliate-icon" alt="Eliza.gg icon">
+                            <span>
+                                <a href="https://eliza.gg" target="_blank" rel="noopener" class="affiliate-link-text">Eliza.gg</a>
+                                - 
+                                <a href="https://x.com/chrislatorres" target="_blank" rel="noopener" class="credit-link">@chrislatorres</a>
+                            </span>
+                        </div>
                     </div>
                 </div>
                 <button id="theme-toggle" class="theme-toggle" title="Toggle dark mode">
