--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="twitter:image" content="https://elizagen.howieduhzit.best/images/card.png">
     <link rel="icon" type="image/x-icon" href="https://elizagen.howieduhzit.best/images/favicon.ico">
     <title>Eliza Character Generator</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script src="https://widgets.coingecko.com/gecko-coin-ticker-widget.js"></script>
 </head>
