Refactor affiliate panel structure and styles: Updated index.html to enhance the affiliate panel's markup by adding an ID and restructuring the content for better clarity. Modified styles.css to improve the display properties of the affiliate panel and links, including adjustments to visibility, padding, and layout. These changes aim to streamline the user experience and improve the overall presentation of affiliate links.

--- a/index.html
+++ b/index.html
@@ -39,14 +39,13 @@
                     <button id="affiliate-toggle" class="affiliate-toggle" title="Affiliate Links">
                         <i class="fa-solid fa-caret-down external-icon"></i>
                     </button>
-                    <div class="affiliate-panel">
-                        <div class="affiliate-link">
+                    <div class="affiliate-panel" id="affiliate-panel">
+                        <div class="affiliate-content">
                             <img src="https://pbs.twimg.com/profile_images/1867831909100781569/vb9ghSVC_400x400.jpg" class="affiliate-icon" alt="Eliza.gg icon">
-                            <span>
+                            <div class="affiliate-links">
                                 <a href="https://eliza.gg" target="_blank" rel="noopener" class="affiliate-link-text">Eliza.gg</a>
-                                - 
                                 <a href="https://x.com/chrislatorres" target="_blank" rel="noopener" class="credit-link">@chrislatorres</a>
-                            </span>
+                            </div>
                         </div>
                     </div>
                 </div>
