--- a/index.html
+++ b/index.html
@@ -16,6 +16,29 @@
     <script src="https://widgets.coingecko.com/gecko-coin-ticker-widget.js"></script>
 </head>
 <body>
+    <div class="snow-container">
+        <div class="snow"></div>
+        <div class="snow"></div>
+        <div class="snow"></div>
+        <div class="snow"></div>
+        <div class="snow"></div>
+        <div class="snow"></div>
+        <div class="snow"></div>
+        <div class="snow"></div>
+        <div class="snow"></div>
+        <div class="snow"></div>
+        <div class="snow"></div>
+        <div class="snow"></div>
+        <div class="snow"></div>
+        <div class="snow"></div>
+        <div class="snow"></div>
+        <div class="snow"></div>
+        <div class="snow"></div>
+        <div class="snow"></div>
+        <div class="snow"></div>
+        <div class="snow"></div>
+        <div class="snow-accumulation"></div>
+    </div>
     <div class="top-frame">
         <div class="frame-content">
             <div class="site-branding">
