Add festive Santa hat and enhance snow animation in index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
     <div class="top-frame">
         <div class="frame-content">
             <div class="site-branding">
+                <svg class="santa-hat" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                    <!-- Hat base -->
+                    <path class="hat-base" d="M10,70 Q30,65 50,70 Q70,75 90,70 L80,50 Q50,45 20,50 Z" fill="#ff0000"/>
+                    <!-- White fur trim -->
+                    <path class="hat-trim" d="M10,70 Q30,65 50,70 Q70,75 90,70 Q70,80 50,75 Q30,70 10,70" fill="#ffffff"/>
+                    <!-- Hat top -->
+                    <path class="hat-top" d="M20,50 Q50,45 80,50 Q65,20 50,15 Q35,20 20,50" fill="#ff0000"/>
+                    <!-- Pom pom -->
+                    <circle class="pom-pom" cx="50" cy="15" r="8" fill="#ffffff"/>
+                </svg>
                 <img src="https://elizagen.howieduhzit.best/images/favicon.ico" alt="Eliza Icon" class="site-icon">
                 <h1 class="site-title">Eliza Character Generator</h1>
             </div>
