--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="https://widgets.coingecko.com/gecko-coin-ticker-widget.js"></script>
 </head>
 <body>
+    <div class="ho-ho-ho">HO HO HO!</div>
     <div class="snow-container">
         <div class="snow"></div>
         <div class="snow"></div>
