Enhance festive features: Added click handler for Santa hat in app.js to trigger 'HO HO HO' animation. Updated index.html to include an icon and text for the 'HO HO HO' display. Improved styles in styles.css for better interactivity and visual appeal, including new animations for the icon and text. These changes aim to enrich the festive experience on the webpage.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <script src="https://widgets.coingecko.com/gecko-coin-ticker-widget.js"></script>
 </head>
 <body>
-    <div class="ho-ho-ho">HO HO HO!</div>
+    <div class="ho-ho-ho">
+        <img src="https://elizagen.howieduhzit.best/images/favicon.ico" alt="Eliza Icon" class="ho-ho-icon">
+        <span class="ho-ho-text">HO HO HO!</span>
+    </div>
     <div class="snow-container">
         <div class="snow"></div>
         <div class="snow"></div>
